OldArchive/4d87f9f7f9872e810025eb5eef466cda-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:13:31: error: no matching function for call to ‘operator new(sizetype, char [1])’
     auto obj = ::new(mem) Foo();
                               ^
main.cpp:13:31: note: candidate is:
<built-in>:0:0: note: void* operator new(long unsigned int)
<built-in>:0:0: note:   candidate expects 1 argument, 2 provided
